--- a/CrpProject/package.json
+++ b/CrpProject/package.json
@@ -10,8 +10,11 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-loader": "^1.1.0",
+    "react-native-loading-spinner-overlay": "^0.5.0",
+    "react-native-swRefresh": "^1.2.3",
     "react-native-tab-navigator": "^0.3.3",
-     "react-native-viewpager": "^0.2.1"
+    "react-native-viewpager": "^0.2.1"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
