--- a/CrpProject/package.json
+++ b/CrpProject/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-dialogs-master": "^1.0.6",
     "react-native-loader": "^1.1.0",
     "react-native-loading-spinner-overlay": "^0.5.0",
     "react-native-swRefresh": "^1.2.3",
