--- a/CrpProject/package.json
+++ b/CrpProject/package.json
@@ -13,6 +13,8 @@
     "react-native-dialogs-master": "^1.0.6",
     "react-native-loader": "^1.1.0",
     "react-native-loading-spinner-overlay": "^0.5.0",
+    "react-native-picker": "^4.0.19",
+    "react-native-picker-android": "^1.0.3",
     "react-native-swRefresh": "^1.2.3",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-viewpager": "^0.2.1"
