--- a/CrpProject/package.json
+++ b/CrpProject/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "pinyin": "^2.8.3",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-deprecated-custom-components": "^0.1.0",
