--- a/CrpProject/android/settings.gradle
+++ b/CrpProject/android/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'CrpProject'
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 include ':react-native-picker'
 project(':react-native-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-picker/android')
-
 include ':app'
