--- a/CrpProject/package.json
+++ b/CrpProject/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.45.1",
     "react-native-deprecated-custom-components": "^0.1.0",
     "react-native-dialogs-master": "^1.0.6",
+    "react-native-image-picker": "^0.26.3",
     "react-native-loader": "^1.1.0",
     "react-native-loading-spinner-overlay": "^0.5.0",
     "react-native-picker": "^4.0.19",
