--- a/CrpProject/package.json
+++ b/CrpProject/package.json
@@ -18,6 +18,7 @@
     "react-native-picker": "^4.0.19",
     "react-native-picker-android": "^1.0.3",
     "react-native-swRefresh": "^1.2.3",
+    "react-native-swipe-list-view": "^0.4.1",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-viewpager": "^0.2.1"
   },
