--- a/CrpProject/package.json
+++ b/CrpProject/package.json
@@ -18,6 +18,7 @@
     "react-native-loading-spinner-overlay": "^0.5.0",
     "react-native-picker": "^4.0.19",
     "react-native-picker-android": "^1.0.3",
+    "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-swRefresh": "^1.2.3",
     "react-native-swipe-list-view": "^0.4.1",
     "react-native-tab-navigator": "^0.3.3",
